tweak spacing below intro text and fix nav menu center on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
   }
 
   .app-menu{
-    width:170px;
+    width:193px;
     padding:0;
     margin:auto;
     margin-top:27px;
